--- a/views/detalle-producto.html
+++ b/views/detalle-producto.html
@@ -5,18 +5,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Guarderías</title>
+
     <!-- Links CSS -->
     <link rel="stylesheet" href="/css/normalize.css">
     <link rel="stylesheet" href="/css/style-home.css">
     <link rel="stylesheet" href="/css/style-producto.css">
+
+    <!-- Links Icons -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet">
+
     <!-- Links Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
 
 
-    <title>detalle-producto</title>
+
 </head>
 
 <body>
@@ -35,152 +40,161 @@
             <a class="iniciar-sesion" href="/inicia-sesion">INICIAR SESION</a>
         </section>
 
-          <!-- Sidebar Nav -->
+        <!-- Sidebar Nav -->
 
         <input type="checkbox" class="openSidebarMenu" id="openSidebarMenu">
         <label for="openSidebarMenu" class="sidebarIconToggle">
-          <div class="spinner diagonal part-1"></div>
-          <div class="spinner horizontal"></div>
-          <div class="spinner diagonal part-2"></div>
+            <div class="spinner diagonal part-1"></div>
+            <div class="spinner horizontal"></div>
+            <div class="spinner diagonal part-2"></div>
         </label>
         <div id="sidebarMenu">
-          <ul class="sidebarMenuInner">
-            <li><a href="#" target="_blank">Mi Cuenta</a></li>
-            <li><a href="#" target="_blank">Guarderias</a></li>
-            <li><a href="#" target="_blank">Nosotros</a></li>
-            <li><a href="#" target="_blank">Contacto</a></li>
-            <li><a href="#" target="_blank">FAQ</a></li>
-            <li><a href="#" target="_blank">Terminos y Condiciones</a></li>
-            <li><a href="https://facebook.com" target="_blank">Facebook</a></li>
-            <li><a href="https://instagram.com" target="_blank">Instagram</a></li>
-            <li><a href="https://twitter.com" target="_blank">Twitter</a></li>
-          </ul>
+            <ul class="sidebarMenuInner">
+                <li><a href="#" target="_blank">Mi Cuenta</a></li>
+                <li><a href="#" target="_blank">Guarderias</a></li>
+                <li><a href="#" target="_blank">Nosotros</a></li>
+                <li><a href="#" target="_blank">Contacto</a></li>
+                <li><a href="#" target="_blank">FAQ</a></li>
+                <li><a href="#" target="_blank">Terminos y Condiciones</a></li>
+                <li><a href="https://facebook.com" target="_blank">Facebook</a></li>
+                <li><a href="https://instagram.com" target="_blank">Instagram</a></li>
+                <li><a href="https://twitter.com" target="_blank">Twitter</a></li>
+            </ul>
         </div>
     </header>
 
+    <!-- Main -->
+
     <main>
-        <article class="articulo1">git
-            <div class="container">
-                <ul class="slider">
-                    <li id="slide1">
-                        <img src="/img/guarderia_canina_1.jpg" alt="guarderia1" class="imagen1">
-                    <li id="slide2">
-                        <img src="/img/guarderia1_slideb.jpg" alt="guarderiab" class="imagen2">
-                    <li id="slide3">
-                        <img src="/img/guarderia1_slidec.jpg" alt="guarderiac" class="imagen2">
-                    </li>
+
+        <section class="articulos">
+            <article class="articulo1">
+                
+                <div class="container">
+                    <ul class="slider">
+                        <li id="slide1">
+                            <img src="/img/guarderia_canina_1.jpg" alt="guarderia1" class="imagen1">
+                        <li id="slide2">
+                            <img src="/img/guarderia1_slideb.jpg" alt="guarderiab" class="imagen2">
+                        <li id="slide3">
+                            <img src="/img/guarderia1_slidec.jpg" alt="guarderiac" class="imagen2">
+                        </li>
+                    </ul>
+                </div>
+
+                <ul class="menu-articulo1">
+                    <li><a href="#slide1">1</a></li>
+                    <li><a href="#slide2">2</a></li>
+                    <li><a href="#slide3">3</a></li>
                 </ul>
-            </div><br>
 
-            <ul class="menu-articulo1">
-                <li>
-                    <a href="#slide1">1</a>
-                </li>
-                <li>
-                    <a href="#slide2">2</a>
-                </li>
-                <li>
-                    <a href="#slide3">3</a>
-                </li>
-
-            </ul>
-
-            <!-- <img src="/img/guarderia_canina_1.jpg" alt="guarderia1" class="imagen1"> -->
-            <p>
-            <div class="nombre-guarderia">Guardería Wag Wag</div>
-            </p>
-            <p>
-            <div class="precios">$$$$</div>
-            </p>
-            <div class="estrellas">
-                <p><i class="fas fa-star"></i> <i class="fas fa-star"></i><i class="fas fa-star"></i><i
-                        class="fas fa-star"></i>
-            </div>
-            </p><br>
-            <p>
-            <div class="cuerpo-detalle">
-                <p>
-                <h1>Características</h1> Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas, autem amet
-                rerum eius quis assumenda libero excepturi illum! Ipsam nam numquam ab iusto nemo enim neque cumque
-                praesentium officia repudiandae?
-                Voluptatibus qui nisi magnam consequuntur, ducimus alias rerum tempora neque nulla ipsam vitae nam
-                consequatur facilis libero suscipit iste eos accusantium modi deleniti reiciendis aperiam quae ullam
-                culpa labore? Eos!</p>
-                <h1>Instalaciones</h1>Quasi inventore illum excepturi, at dignissimos officia possimus assumenda in
-                nihil corporis minus aliquid, soluta eum beatae dolore quas eligendi molestias accusantium? Ad porro
-                sunt, assumenda non explicabo quasi at.
-                Illo, optio! Vitae ratione fugit quo fugiat, consequatur labore voluptatibus eius quibusdam
-                reprehenderit aperiam voluptate atque ut non praesentium omnis minus voluptates. Enim, corporis?
-                Voluptatibus quae dolore culpa corporis quasi.
-            </div>
-            </p>
-            <p>
-            <div class="reservar" strong><a href="#">Reservar</a></strong><i class="fas fa-paw"
-                    class="huellita-reserva"></i></div>
-            </p>
-
-        </article>
-
-        <article class="articulo2">
-            <div class="container">
-                <ul class="slider">
-                    <li id="slideA">
-                        <img src="/img/CATIS_2.jpg" alt="guarderia2" class="imagen1">
-                    <li id="slideB">
-                        <img src="/img/catis_3.jpg" alt="guarderiab" class="imagen2">
-                    <li id="slideC">
-                        <img src="/img/guarderia_2.jpg" alt="guarderiac" class="imagen3">
-                    </li>
-                </ul>
-            </div><br>
-
-            <ul class="menu-articulo2">
-                <li>
-                    <a href="#slideA">1</a>
-                </li>
-                <li>
-                    <a href="#slideB">2</a>
-                </li>
-                <li>
-                    <a href="#slideC">3</a>
-                </li>
-
-            </ul>
-
-            <article class="articulo2">
-                <p>
-                <div class="nombre-guarderia">Guardería Catis</div>
-                </p>
-                <p>
+                <!-- <img src="/img/guarderia_canina_1.jpg" alt="guarderia1" class="imagen1"> -->
+                <div class="nombre-guarderia">Guardería Wag Wag</div>
                 <div class="precios">$$$$</div>
-                </p>
                 <div class="estrellas">
-                    <p><i class="fas fa-star"></i> <i class="fas fa-star"></i><i class="fas fa-star"></i><i
-                            class="fas fa-star"></i>
+                    <i class="fas fa-star"></i> <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i><i class="fas fa-star"></i>
                 </div>
-                </p><br>
+
                 <div class="cuerpo-detalle">
-                    <p>
-                    <h1>Características</h1> Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas, autem
-                    amet rerum eius quis assumenda libero excepturi illum! Ipsam nam numquam ab iusto nemo enim neque
-                    cumque praesentium officia repudiandae?
-                    Voluptatibus qui nisi magnam consequuntur, ducimus alias rerum tempora neque nulla ipsam vitae nam
-                    consequatur facilis libero suscipit iste eos accusantium modi deleniti reiciendis aperiam quae ullam
-                    culpa labore? Eos!</p>
-                    <h1>Instalaciones</h1>Quasi inventore illum excepturi, at dignissimos officia possimus assumenda in
-                    nihil corporis minus aliquid, soluta eum beatae dolore quas eligendi molestias accusantium? Ad porro
-                    sunt, assumenda non explicabo quasi at.
-                    Illo, optio! Vitae ratione fugit quo fugiat, consequatur labore voluptatibus eius quibusdam
-                    reprehenderit aperiam voluptate atque ut non praesentium omnis minus voluptates. Enim, corporis?
-                    Voluptatibus quae dolore culpa corporis quasi.
+
+                    <h3>Características</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas, autem amet
+                        rerum eius quis assumenda libero excepturi illum! Ipsam nam numquam ab iusto nemo enim neque
+                        cumque
+                        praesentium officia repudiandae?
+                        Voluptatibus qui nisi magnam consequuntur, ducimus alias rerum tempora neque nulla ipsam vitae
+                        nam
+                        consequatur facilis libero suscipit iste eos accusantium modi deleniti reiciendis aperiam quae
+                        ullam
+                        culpa labore? Eos!
+                    </p>
+                    <h3>Instalaciones</h3>
+                    <p>Quasi inventore illum excepturi, at dignissimos officia possimus assumenda in
+                        nihil corporis minus aliquid, soluta eum beatae dolore quas eligendi molestias accusantium? Ad
+                        porro
+                        sunt, assumenda non explicabo quasi at.
+                        Illo, optio! Vitae ratione fugit quo fugiat, consequatur labore voluptatibus eius quibusdam
+                        reprehenderit aperiam voluptate atque ut non praesentium omnis minus voluptates. Enim, corporis?
+                        Voluptatibus quae dolore culpa corporis quasi.
+                    </p>
                 </div>
-                </p>
-                <p>
-                <div class="reservar" strong><a href="#">Reservar</a></strong><i class="fas fa-paw"
-                        class="huellita-reserva"></i></div>
-                </p>
+
+                <div class="reservar" strong>
+                    <a href="#">Reservar</a></strong>
+                    <i class="fas fa-paw huellita-reserva"></i>
+                </div>
 
             </article>
+
+
+            <article class="articulo2">
+                <div class="container">
+                    <ul class="slider">
+                        <li id="slideA">
+                            <img src="/img/CATIS_2.jpg" alt="guarderia2" class="imagen1">
+                        <li id="slideB">
+                            <img src="/img/catis_3.jpg" alt="guarderiab" class="imagen2">
+                        <li id="slideC">
+                            <img src="/img/guarderia_2.jpg" alt="guarderiac" class="imagen3">
+                        </li>
+                    </ul>
+                </div><br>
+
+                <ul class="menu-articulo2">
+                    <li>
+                        <a href="#slideA">1</a>
+                    </li>
+                    <li>
+                        <a href="#slideB">2</a>
+                    </li>
+                    <li>
+                        <a href="#slideC">3</a>
+                    </li>
+
+                </ul>
+
+                <article class="articulo2">
+                    <p>
+                    <div class="nombre-guarderia">Guardería Catis</div>
+                    </p>
+                    <p>
+                    <div class="precios">$$$$</div>
+                    </p>
+                    <div class="estrellas">
+                        <p><i class="fas fa-star"></i> <i class="fas fa-star"></i><i class="fas fa-star"></i><i
+                                class="fas fa-star"></i>
+                    </div>
+                    </p><br>
+                    <div class="cuerpo-detalle">
+                        <p>
+                        <h1>Características</h1> Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas,
+                        autem
+                        amet rerum eius quis assumenda libero excepturi illum! Ipsam nam numquam ab iusto nemo enim
+                        neque
+                        cumque praesentium officia repudiandae?
+                        Voluptatibus qui nisi magnam consequuntur, ducimus alias rerum tempora neque nulla ipsam vitae
+                        nam
+                        consequatur facilis libero suscipit iste eos accusantium modi deleniti reiciendis aperiam quae
+                        ullam
+                        culpa labore? Eos!</p>
+                        <h1>Instalaciones</h1>Quasi inventore illum excepturi, at dignissimos officia possimus assumenda
+                        in
+                        nihil corporis minus aliquid, soluta eum beatae dolore quas eligendi molestias accusantium? Ad
+                        porro
+                        sunt, assumenda non explicabo quasi at.
+                        Illo, optio! Vitae ratione fugit quo fugiat, consequatur labore voluptatibus eius quibusdam
+                        reprehenderit aperiam voluptate atque ut non praesentium omnis minus voluptates. Enim, corporis?
+                        Voluptatibus quae dolore culpa corporis quasi.
+                    </div>
+                    </p>
+                    <p>
+                    <div class="reservar" strong><a href="#">Reservar</a></strong><i class="fas fa-paw"
+                            class="huellita-reserva"></i></div>
+                    </p>
+
+                </article>
+        </section>
     </main>
 
     <footer>
