--- a/public/css/style-producto.css
+++ b/public/css/style-producto.css
@@ -1,247 +1,153 @@
-*{
-    box-sizing: border-box;
+:root {
+  --verde-oscuro: #3f4e4a;
+  --verde-claro: #3f7552;
+  --celeste-oscuro: #9fb7bc;
+  --celeste-claro: #bccfd6;
+}
+
+main {
+  margin-top: 134px;
+}
+
+/* Flex's */
+
+article {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  padding: 10px;
+  margin-bottom: 10px;
+}
+
+/* Slider article */
+
+.container {
+  margin: 20px;
+  background-color: white;
+  width: 100%;
 }
 
 
-* {
-    font-family: "Raleway", sans-serif;
-  }
-  
-  :root {
-    --verde-oscuro: #3f4e4a;
-    --verde-claro: #3f7552;
-    --celeste-oscuro: #9fb7bc;
-    --celeste-claro: #bccfd6;
-  }
-
-
-  /* .imagen1,
-  .imagen2{
-      width: 90%;
-      display:block;
-      text-align: center;
-      margin:10px;
-      padding: 10px;
-
-  } */
-h1{
+h1 {
   font-size: 20px;
-
 }
 
-  .nombre-guarderia{
-      font-size: 25px;;
-      color:#3f4e4a;
-      font-weight: bold;
-      text-align: center;
-  }
-
-  .cuerpo-detalle{
-      font-size: 15px;
-      text-align: center;
-    
-  }
-
-  .articulo1,
-  .articulo2 {
-      width:80%;
-    padding:10px;
-    margin-bottom: 10px;
-    
-  }
-
-  div.cuerpo-detalle{
-padding: 20px;
-width: fit-content;
-text-align: justify;
-background-color:hsl(197, 39%, 86%,0.4);
-  }
-
-  .precios{
-    text-align:center;
-  }
-  .reservar{
-text-decoration:none;
-    font-weight: 300;
-    font-size: 18px;
-    color:#333333;
-    padding-top:15px;
-    padding-bottom:15px;
-    padding-left:40%;
-    padding-right:40%;
-    background-color:#bccfd6;
-    border-color:#9fb7bc;
-    border-width: 3px;
-    border-style: solid;
-    border-radius:25px;
-    display: flex;
-    justify-content:center;
-
-    }
-
-    .reservar a{
-      text-decoration: none;
-      color:#333333;
-    }
-
-
-
-
-  .sobre-nosotros {
-    display: block;
-    padding: 20px;
-  }
-  
-  .sobre-nosotros h3 {
-    display: block;
-    text-align: center;
-    margin: 10px;
-    color: var(--verde-oscuro);
-    font-size: 18px;
-  }
-  
-  .sobre-nosotros p {
-    display: block;
-    text-align: center;
-    margin: 10px;
-    color: var(--verde-oscuro);
-    font-size: 12px;
-  }
-  
-  footer {
-    padding: 10px;
-    background-color: var(--celeste-claro);
-    text-align: center;
-  }
-  
-  .footer-nav{
-    display: flex;
-  }
-  
-  .footer-nav1,
-  .footer-nav2 {
-    flex: 50%;
-  }
-  
-  .footer-nav1{
-    line-height: 30px;
-  }
-  
-  .footer-nav2 {
-    line-height:22px;
-  }
-  
-  .footer-nav1 a,
-  .footer-nav2 a{
-    text-decoration: none;
-    color: var(--verde-oscuro)
-  }
-  
-  .redes{
-      margin: 20px;
-  }
-  
-  .redes h4{
-    margin-bottom: 10px;
-  }
-  
-  .fab {
-    font-size: 28px;
-    color: black;
-    opacity: 80%;
-    margin: 5px;
-  }
-  
-  .estrellas{
-    color:#3f7552;
-    display:block;
-    text-align: center;
-
-  }
-
-  .container{
-    margin:auto;
-    background-color: white;
-    width: 100%;
-    padding:10px;
-  }
-
-  ul, li{
-    margin:0;
-    padding:0;
-    list-style: none;
-  }
-  ul.slider{
-    position:relative;
-    width: 100%;
-    height: 210px;
-    text-align:center;
-  }
-  ul.slider li {
-    position: absolute;
-    left: 0px;
-    top: 0px;
-    opacity: 0;
-    width: inherit;
-    transition: opacity .5s;
-    background:#fff;
+.nombre-guarderia {
+  font-size: 25px;
+  color: #3f4e4a;
+  font-weight: bold;
+  text-align: center;
 }
-ul.slider li img{
+
+.precios {
+  text-align: center;
+}
+
+.estrellas {
+  color: #3f7552;
+  display: block;
+  text-align: center;
+}
+
+.cuerpo-detalle {
+  font-size: 15px;
+  text-align: center;
+}
+
+div.cuerpo-detalle {
+  padding: 20px;
+  width: fit-content;
+  text-align: justify;
+  background-color: hsl(197, 39%, 86%, 0.4);
+}
+
+.reservar {
+  text-decoration: none;
+  font-weight: 300;
+  font-size: 18px;
+  color: #333333;
+  padding-top: 15px;
+  padding-bottom: 15px;
+  padding-left: 40%;
+  padding-right: 40%;
+  background-color: #bccfd6;
+  border-color: #9fb7bc;
+  border-width: 3px;
+  border-style: solid;
+  border-radius: 25px;
+  display: flex;
+  justify-content: center;
+}
+
+.reservar a {
+  text-decoration: none;
+  color: #333333;
+}
+
+
+ul,
+li {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+ul.slider {
+  position: relative;
+  width: 100%;
+  height: 210px;
+  text-align: center;
+}
+
+ul.slider li {
+  position: absolute;
+  left: 0px;
+  top: 0px;
+  opacity: 0;
+  width: inherit;
+  transition: opacity 0.5s;
+  background: #fff;
+}
+
+ul.slider li img {
   height: 250px;
-  object-fit:cover;
+  object-fit: cover;
   width: 60%;
   display: inline-block;
-  margin:auto;
-  margin:5px;
+  margin: auto;
+  margin: 5px;
   padding: 5px;
 }
 
 ul.slider li:first-child {
-    opacity: 1; /*Mostramos el primer <li>*/
+  opacity: 1; /*Mostramos el primer <li>*/
 }
 
 ul.slider li:target {
-    opacity: 1; /*Mostramos el <li> del enlace que pulsemos*/
+  opacity: 1; /*Mostramos el <li> del enlace que pulsemos*/
+}
+
+.menu-articulo1,
+.menu-articulo2 {
+  text-align: center;
+  margin-top: 30px;
+}
+
+.menu-articulo1 li,
+.menu-articulo2 li {
+  display: inline-block;
+  text-align: center;
+}
+
+.menu-articulo1 a,
+.menu-articulo2 a {
+  display: inline-block;
+  color: white;
+  text-decoration: none;
+  background-color: #3f7552;
+  padding: 5px;
+  font-size: 15px;
+  border-radius: 100%;
 }
 
 
-
-  .menu-articulo1,
-  .menu-articulo2{
-    text-align:center;
-    margin-top: 30px;
-  }
-  .menu-articulo1 li{
-    display:inline-block;
-    text-align: center;
-    
-  }
-  .menu-articulo1 a{
-    display:inline-block;
-    color:white;
-    text-decoration: none;
-    background-color: #3f7552;
-    padding: 5px;
-    font-size: 15px;
-    border-radius: 100%;
-  
-
-  }
-
-  .menu-articulo2 li{
-    display:inline-block;
-    text-align: center;
-    
-  }
-
-  .menu-articulo2 a{
-    display:inline-block;
-    color:white;
-    text-decoration: none;
-    background-color: #3f7552;
-    padding: 5px;
-    font-size: 15px;
-    border-radius: 100%;
-
-  }
-  
