--- a/views/home.html
+++ b/views/home.html
@@ -26,7 +26,7 @@
         <section class="topheader">
             <div class="logo-menu"><i class="fas fa-bars" alt="logo menu"></i></div>
             <div class="vacio"></div>
-            <div class="logo"><a href="/"><img class="logo-alojamascotas" src="./img/logo-alojamascotas.svg"
+            <div class="logo"><a href="/"><img class="logo-alojamascotas" src="./img/group.svg"
                         alt="logo de la empresa"></a></div>
             <div class="icon-search"><i class="fas fa-search" alt="logo busqueda"></i></div>
             <div class="icon-cart"><a href="/carrito"><i class="fas fa-shopping-cart" alt="logo carrito"></i></a></div>
@@ -60,18 +60,22 @@
         </div>
 
     </header>
-   
+
 <!-- Main -->
 
     <main>
         <section class="main-slider">
             <div class="slides">
-                <img src="./img/main-slider-1.jpg" alt="imagen main 1">
+                <img src="./img/CATIS_2.jpg" alt="imagen main 1">
+                <div class="contenedor-encontra-guarderia"><h3 class="encontra-guarderia">ENCONTRA SU LUGAR</h3></div>
+            </div>
         </section>
+
+
 
         <section class="main-productos">
             <h3>NUESTRAS GUARDERIAS</h3>
-            <div class="guarderia-1"><i class="fas fa-home"></i></div>
+            <div class="guarderia-1"><img class="img-guarderia1" src="./img/guarderia_canina_1.jpg" alt="guarderia1"></div>
             <h4>Guarderia 1</h4>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus, laboriosam molestias quos eum placeat
                 quibusdam explicabo autem debitis repellendus expedita?</p>
