--- a/public/css/style-home.css
+++ b/public/css/style-home.css
@@ -10,7 +10,7 @@
 }
 
 header {
-  background-color: var(--celeste-claro);
+  background-color: #c7dae0;
   position: fixed;
   top: 0;
   z-index: 9999;
@@ -58,6 +58,7 @@ header {
   display: block;
   min-width: 40vw;
   max-height: 13vh;
+  padding: 5px;
 
 }
 
@@ -77,7 +78,7 @@ header {
   display: block;
   width: 15%;
   padding-right: 3%;
- 
+
 }
 
 .icon-cart i {
@@ -96,7 +97,7 @@ header {
   width: 100vw;
   height: 20%;
   text-align: center;
-  
+
 }
 
 .subheader .crear-cuenta {
@@ -155,7 +156,7 @@ header {
 
 .openSidebarMenu:checked ~ #sidebarMenu {
   transform: translateX(0);
-} 
+}
 
 .openSidebarMenu {
   transition: all 0.3s;
@@ -225,23 +226,53 @@ header {
 /* Main */
 
 main {
-  margin-top: 134px;
+  margin-top: 100px;
 }
 
 .main-slider {
   position: relative;
-  max-width: 70vw;
+  max-width: 100vw;
   margin: auto;
 }
 
 .main-slider img {
   display: block;
-  width: 80%;
+  width: 100%;
   margin-left: auto;
   margin-right: auto;
+  opacity: 0.6;
 
 }
 
+.slides{
+  position: relative;
+
+}
+
+
+.encontra-guarderia{
+  position: absolute;
+  width: 60vw;
+  height: 10vh;
+  bottom: 20px;
+  left: 30px;
+  max-width: 300px;
+  font-size: 15px;
+  color: white;
+  padding: 15px;
+  background-color: rgba(128, 128, 128, 0.247);
+  border-radius: 5px;
+
+}
+
+
+
+.main-productos{
+  margin: 30px;
+  text-align: center;
+  background-color: rgba(128, 128, 128, 0.096);
+  border-radius: 5px;
+}
 
 .main-productos h3 {
   display: block;
@@ -249,15 +280,16 @@ main {
   color: var(--verde-oscuro);
   font-size: 18px;
   opacity: 80%;
-  padding: 20px 10px;
+  padding: 40px 10px;
 }
 
-.guarderia-1 {
-  text-align: center;
-  font-size: 48px;
-  color: var(--verde-oscuro);
-  margin: 10px;
+.img-guarderia1{
+  width: 200px;
+  height: 150px;
+  border-radius: 5px;
+  opacity: 0.7;
 }
+
 
 .main-productos h4 {
   display: block;
@@ -271,7 +303,7 @@ main {
   text-align: center;
   font-size: 12px;
   color: var(--verde-oscuro);
-  margin: 10px 40px;
+  margin: 10px 40px
 }
 
 .boton-reservar {
@@ -286,22 +318,26 @@ main {
   text-align: center;
   text-decoration: none;
   color: var(--verde-oscuro);
-  padding: 5px;
-  border: 1px var(--verde-oscuro) solid;
+  padding: 5px 15px;
   border-radius: 5px;
+  background-color: #c7dae0;
 }
 
 .sobre-nosotros {
   display: block;
   padding: 20px;
+  margin: 30px;
+  text-align: center;
+  background-color: rgba(128, 128, 128, 0.096);
+  border-radius: 5px;
 }
 
 .sobre-nosotros h3 {
   display: block;
   text-align: center;
-  margin: 10px;
   color: var(--verde-oscuro);
   font-size: 18px;
+  padding: 20px 10px;
 }
 
 .sobre-nosotros p {
