--- a/views/detalle-producto.html
+++ b/views/detalle-producto.html
@@ -59,7 +59,7 @@
     </header>
 
     <main>
-        <article class="articulo1">git
+        <article class="articulo1">
             <div class="container">
                 <ul class="slider">
                     <li id="slide1">
