--- a/public/css/style-registro.css
+++ b/public/css/style-registro.css
@@ -12,6 +12,7 @@
     --verde-claro: #3f7552;
     --celeste-oscuro: #9fb7bc;
     --celeste-claro: #bccfd6;
+    --gris: rgba(128, 128, 128, 0.151);
   }
 
 
@@ -36,7 +37,7 @@
 .contenedor-registro {
   margin: 30px;
   text-align: center;
-  background-color: rgba(128, 128, 128, 0.24);
+  background-color: var(--gris);
   border-radius: 10px;
 }
 
