--- a/public/css/style-registro.css
+++ b/public/css/style-registro.css
@@ -11,7 +11,7 @@
     --verde-oscuro: #3f4e4a;
     --verde-claro: #3f7552;
     --celeste-oscuro: #9fb7bc;
-    --celeste-claro: #bccfd6;
+    --celeste-claro: #c7dae0;
     --gris: rgba(128, 128, 128, 0.151);
   }
 
