--- a/views/carrito.html
+++ b/views/carrito.html
@@ -27,7 +27,7 @@
         <section class="topheader">
             <div class="logo-menu"><i class="fas fa-bars" alt="logo menu"></i></div>
             <div class="vacio"></div>
-            <div class="logo"><a href="/"><img class="logo-alojamascotas" src="./img/logo-alojamascotas.svg"
+            <div class="logo"><a href="/"><img class="logo-alojamascotas" src="./img/group.svg"
                         alt="logo de la empresa"></a></div>
             <div class="icon-search"><i class="fas fa-search" alt="logo busqueda"></i></div>
             <div class="icon-cart"><a href="/carrito"><i class="fas fa-shopping-cart" alt="logo carrito"></i></a></div>       
