--- a/public/css/style-carritob.css
+++ b/public/css/style-carritob.css
@@ -2,7 +2,7 @@
       --verde-oscuro: #3f4e4a;
       --verde-claro: #3f7552;
       --celeste-oscuro: #9fb7bc;
-      --celeste-claro: #bccfd6;
+      --celeste-claro: #c7dae0;
     }
 
 
