--- a/views/carrito.html
+++ b/views/carrito.html
@@ -195,7 +195,7 @@
             </div>
             <span><a href="#"></a></span>
             <div class="finalizar-compra">
-                <button type="submit">Finalizar Compra</button>
+                <button type="submit">FINALIZAR COMPRA</button>
             </div>
         </section>
 
