--- a/public/css/style-producto.css
+++ b/public/css/style-producto.css
@@ -3,10 +3,89 @@
   --verde-claro: #3f7552;
   --celeste-oscuro: #9fb7bc;
   --celeste-claro: #c7dae0;
+  --gris-claro: #e0e7eb;
 }
 
-main {
-  margin-top: 134px;
+/* Buscador - Producto */
+
+.resumen-producto{
+  position: relative;
+  background-color: var(--gris-claro);
+}
+
+.titulo-categoria{
+  font-size: 13px;
+  color: var(--verde-oscuro)
+}
+
+.opciones-categoria {
+  font-size: 12px;
+  padding: 5px;
+  color: var(--verde-oscuro)      
+}
+
+.fechas-producto {
+  display: flex;
+  flex-direction: row;
+  margin: 5px 0;
+}
+
+.fechas-producto input {
+  font-size: 12px;
+  color: var(--verde-oscuro);
+}
+
+.fechas-producto label {
+  padding: 5px 0;
+  font-size: 12px;
+  color: var(--verde-oscuro)
+}
+
+.cantidad .mascota {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+  margin: 10px 0;
+}
+
+.cantidad .fa-dog,
+.cantidad .fa-cat {
+  font-size: 18px;
+  text-align: center;
+  color: var(--verde-oscuro);
+  width: 24px;
+  height: 24px;
+  background-color: white;
+  border-radius: 30%;
+  border: solid 1px var(--verde-oscuro);
+  padding-top: 2px;
+  margin-right: 5px;
+  
+}
+
+.cantidad .fa-plus,
+.cantidad .fa-minus {
+  font-size: 14px;
+  background-color: var(--celeste-claro);
+  border: solid 1px var(--celeste-claro);
+  border-radius: 50%;
+  color: white;
+}
+
+.cantidad div{
+  font-family: sans-serif;
+  font-size: 12px;
+}
+
+.precio {
+  position: absolute;
+  bottom: 10px;
+  right: 15px;
+  font-size: 14px;
+  padding: 4px;
+  border-bottom: solid 1px var(--celeste-oscuro);
+
 }
 
 /* Flex's */
