--- a/views/home.html
+++ b/views/home.html
@@ -75,7 +75,7 @@
         <section class="main-productos">
             <h3>NUESTRAS GUARDERIAS</h3>
             <div class="guarderia-1"><img class="img-guarderia1" src="./img/guarderia_canina_1.jpg" alt="guarderia1"></div>
-            <h4>Guarderia 1</h4>
+            <i class="fas fas-arrow fa-angle-left"></i><h4>Guarderia 1</h4><i class="fas fas-arrow fa-angle-right"></i>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus, laboriosam molestias quos eum placeat
                 quibusdam explicabo autem debitis repellendus expedita?</p>
             <div class="boton-reservar"><a href="/detalle-producto">RESERVAR</a></div>
