--- a/views/carrito.html
+++ b/views/carrito.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AlojaMascotas</title>
+    <title>AlojaMascotas - Cart</title>
+    <link rel="icon" type="image/x-icon" href="/img/Group.svg">
 
     <!-- Links CSS -->
     <link rel="stylesheet" href="css/normalize.css">
@@ -46,11 +47,11 @@
         </label>
         <div id="sidebarMenu">
           <ul class="sidebarMenuInner">
-            <li><a href="#" target="_blank">Mi Cuenta</a></li>
-            <li><a href="#" target="_blank">Nosotros</a></li>
-            <li><a href="#" target="_blank">Contacto</a></li>
-            <li><a href="#" target="_blank">FAQ</a></li>
-            <li><a href="#" target="_blank">Terminos y Condiciones</a></li>
+            <li><a href="/registro">Mi Cuenta</a></li>
+            <li><a href="/detalle-producto">Nosotros</a></li>
+            <li><a href="#">Contacto</a></li>
+            <li><a href="#">FAQ</a></li>
+            <li><a href="#">Terminos y Condiciones</a></li>
             <li><a href="https://facebook.com" target="_blank">Facebook</a></li>
             <li><a href="https://instagram.com" target="_blank">Instagram</a></li>
             <li><a href="https://twitter.com" target="_blank">Twitter</a></li>
@@ -179,7 +180,7 @@
         <section class="resumen-cart-total">
             <div class="subtotal">
                 <h5 class="subtotal-title">Subtotal:</h5>
-                <h5 class="subtotal-value">$555,99</h5>
+                <h5 class="subtotal-value">$224,55</h5>
             </div>
             <div class="impuestos-tasas">
                 <h5 class="impuestos-tasas-title">Impuestos y Tasas</h5>
@@ -191,7 +192,7 @@
             </div>
             <div class="total">
                 <h4 class="total-title">Total:</h4>
-                <h4 class="total-value">$455,99</h4>
+                <h4 class="total-value">$124,55</h4>
             </div>
             <span><a href="#"></a></span>
             <div class="finalizar-compra">
