--- a/views/home.html
+++ b/views/home.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AlojaMascotas</title>
+    <link rel="icon" type="image/x-icon" href="/img/Group.svg">
 
     <!-- Links CSS -->
     <link rel="stylesheet" href="css/style-home.css">
@@ -46,12 +47,12 @@
         </label>
         <div id="sidebarMenu">
           <ul class="sidebarMenuInner">
-            <li><a href="#" target="_blank">Mi Cuenta</a></li>
-            <li><a href="#" target="_blank">Guarderias</a></li>
-            <li><a href="#" target="_blank">Nosotros</a></li>
-            <li><a href="#" target="_blank">Contacto</a></li>
-            <li><a href="#" target="_blank">FAQ</a></li>
-            <li><a href="#" target="_blank">Terminos y Condiciones</a></li>
+            <li><a href="/registro">Mi Cuenta</a></li>
+            <li><a href="/detalle-producto">Guarderias</a></li>
+            <li><a href="#">Nosotros</a></li>
+            <li><a href="#">Contacto</a></li>
+            <li><a href="#">FAQ</a></li>
+            <li><a href="#">Terminos y Condiciones</a></li>
             <li><a href="https://facebook.com" target="_blank">Facebook</a></li>
             <li><a href="https://instagram.com" target="_blank">Instagram</a></li>
             <li><a href="https://twitter.com" target="_blank">Twitter</a></li>
