--- a/public/css/style-producto.css
+++ b/public/css/style-producto.css
@@ -8,35 +8,35 @@
 
 /* Buscador - Producto */
 
-.resumen-producto{
+.buscarPorNombre {
   position: fixed;
-  top: 130px;
-  z-index: 99;
+  width: 90vw;
+  top: 134px;
+  z-index: 999;
+  margin-left: 5vw;
+  margin-right: 5vw;
+  background-color: var(--celeste-oscuro);
   border-bottom-left-radius: 10px;
   border-bottom-right-radius: 10px;
+  font-size: 12px;
+  padding: 5px;
+  text-align: center;
+
+}
+
+.resumen-producto{
+  width: 96vw;
+  position: sticky;
+  bottom: 5px;
+  z-index: 99;
+  border-radius: 10px;
   padding: 10px 0;
+  margin: 0 2vw;
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
-  align-items: center;
+  align-items: flex-start;
   background-color: var(--gris-claro);
-}
-
-.nombre-y-categoria {
-  width: 30%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-}
-
-.buscar-nombre input{
-  width: 7rem;
-}
-
-
-.buscar-nombre label,
-.buscar-nombre {
-  font-size: 12px;
 }
 
 .categoria-producto,
@@ -102,6 +102,7 @@
   border: solid 1px var(--celeste-claro);
   border-radius: 50%;
   color: white;
+  margin: 0 2px;
 }
 
 .cantidad div{
