--- a/views/detalle-producto.html
+++ b/views/detalle-producto.html
@@ -68,45 +68,9 @@
 
     <main>
 
-        <div class="resumen-producto">
-            <div class="nombre-y-categoria">
-                <div class="buscar-nombre">
-                    <form action="buscarnombre" method="GET">
-                        <label class="titulo-categoria">Nombre:</label>
-                        <input type="text" name="nombreGuarderia">
-                    </form>
-                </div>
-                <div class="categoria-producto">
-                    <form action="categoria" method="GET">
-                        <label class="titulo-categoria">Cat. :</label>
-                        <select class="opciones-categoria" name="categoria">
-                            <option value="cat1" selected>Categoria 1</option>
-                            <option value="cat2">Categoria 2</option>
-                            <option value="cat3">Categoria 3</option>
-                        </select>
-                    </form>
-                </div>
-            </div>
-            <div class="fechas-producto">
-                <label>Desde:</label><input type="date" name="fechaIngreso" value="2022-04-22" min="2022-04-01"
-                    max="2023-12-31">
-                <label>Hasta:</label><input type="date" name="fechaSalida" value="2022-04-27" min="2022-04-01"
-                    max="2023-12-31">
-            </div>
-            <div class="cantidad">
-                <div class="mascota">
-                    <i class="fas fa-dog"></i>
-                    <i class="fas fa-plus"></i>
-                    <div>0</div>
-                    <i class="fas fa-minus"></i>
-                </div>
-                <div class="mascota">
-                    <i class="fas fa-cat"></i>
-                    <i class="fas fa-plus"></i>
-                    <div>1</div>
-                    <i class="fas fa-minus"></i>
-                </div>
-            </div>
+        <div class="buscarPorNombre">
+            <label>Buscar por nombre:</label>
+            <input type="text" name="nombreGuarderia">
         </div>
 
         <section class="articulos">
@@ -237,6 +201,41 @@
 
                 </article>
         </section>
+
+        <div class="resumen-producto">
+            <div class="categoria-producto">
+                <form action="categoria" method="GET">
+                    <label class="titulo-categoria">Cat. :</label><br>
+                    <select class="opciones-categoria" name="categoria">
+                        <option value="cat1" selected>Categoria 1</option>
+                        <option value="cat2">Categoria 2</option>
+                        <option value="cat3">Categoria 3</option>
+                    </select>
+                </form>
+            </div>
+
+            <div class="fechas-producto">
+                <label>Desde:</label><input type="date" name="fechaIngreso" value="2022-04-22" min="2022-04-01"
+                    max="2023-12-31">
+                <label>Hasta:</label><input type="date" name="fechaSalida" value="2022-04-27" min="2022-04-01"
+                    max="2023-12-31">
+            </div>
+            <div class="cantidad">
+                <div class="mascota">
+                    <i class="fas fa-dog"></i>
+                    <i class="fas fa-plus"></i>
+                    <div>0</div>
+                    <i class="fas fa-minus"></i>
+                </div>
+                <div class="mascota">
+                    <i class="fas fa-cat"></i>
+                    <i class="fas fa-plus"></i>
+                    <div>1</div>
+                    <i class="fas fa-minus"></i>
+                </div>
+            </div>
+        </div>
+
     </main>
 
     <footer>
