--- a/views/detalle-producto.html
+++ b/views/detalle-producto.html
@@ -51,9 +51,9 @@
         </label>
         <div id="sidebarMenu">
             <ul class="sidebarMenuInner">
-                <li><a href="/registro">Mi Cuenta</a></li>
+                <li><a href="/inicia-sesion">Mi Cuenta</a></li>
                 <li><a href="/detalle-producto">Guarderias</a></li>
-                <li><a href="#">Nosotros</a></li>
+                <li><a href="/">Nosotros</a></li>
                 <li><a href="#">Contacto</a></li>
                 <li><a href="#">FAQ</a></li>
                 <li><a href="#">Terminos y Condiciones</a></li>
