--- a/public/css/style-carrito.css
+++ b/public/css/style-carrito.css
@@ -3,6 +3,8 @@
       --verde-claro: #3f7552;
       --celeste-oscuro: #9fb7bc;
       --celeste-claro: #c7dae0;
+      --gris: rgba(128, 128, 128, 0.151);
+      --gris-oscuro: rgba(128, 128, 128, 0.247);
     }
 
 main {
