--- a/views/carrito.html
+++ b/views/carrito.html
@@ -31,7 +31,7 @@
             <div class="logo"><a href="/"><img class="logo-alojamascotas" src="./img/group.svg"
                         alt="logo de la empresa"></a></div>
             <div class="icon-search"><i class="fas fa-search" alt="logo busqueda"></i></div>
-            <div class="icon-cart"><a href="/carrito"><i class="fas fa-shopping-cart" alt="logo carrito"></i></a></div>       
+            <div class="icon-cart"><a href="/carrito"><i class="fas fa-shopping-cart" alt="logo carrito"></i></a></div>
         </section>
         <section class="subheader">
             <a class="crear-cuenta" href="/registro">CREAR CUENTA</a>
@@ -39,25 +39,27 @@
             <a class="iniciar-sesion" href="/inicia-sesion">INICIAR SESION</a>
         </section>
 
+        <!-- Sidebar Nav -->
+
         <input type="checkbox" class="openSidebarMenu" id="openSidebarMenu">
         <label for="openSidebarMenu" class="sidebarIconToggle">
-          <div class="spinner diagonal part-1"></div>
-          <div class="spinner horizontal"></div>
-          <div class="spinner diagonal part-2"></div>
+            <div class="spinner diagonal part-1"></div>
+            <div class="spinner horizontal"></div>
+            <div class="spinner diagonal part-2"></div>
         </label>
         <div id="sidebarMenu">
-          <ul class="sidebarMenuInner">
-            <li><a href="/registro">Mi Cuenta</a></li>
-            <li><a href="/detalle-producto">Nosotros</a></li>
-            <li><a href="#">Contacto</a></li>
-            <li><a href="#">FAQ</a></li>
-            <li><a href="#">Terminos y Condiciones</a></li>
-            <li><a href="https://facebook.com" target="_blank">Facebook</a></li>
-            <li><a href="https://instagram.com" target="_blank">Instagram</a></li>
-            <li><a href="https://twitter.com" target="_blank">Twitter</a></li>
-          </ul>
+            <ul class="sidebarMenuInner">
+                <li><a href="/inicia-sesion">Mi Cuenta</a></li>
+                <li><a href="/detalle-producto">Guarderias</a></li>
+                <li><a href="/">Nosotros</a></li>
+                <li><a href="#">Contacto</a></li>
+                <li><a href="#">FAQ</a></li>
+                <li><a href="#">Terminos y Condiciones</a></li>
+                <li><a href="https://facebook.com" target="_blank">Facebook</a></li>
+                <li><a href="https://instagram.com" target="_blank">Instagram</a></li>
+                <li><a href="https://twitter.com" target="_blank">Twitter</a></li>
+            </ul>
         </div>
-
     </header>
 
 
