--- a/src/views/partials/headerMain.ejs
+++ b/src/views/partials/headerMain.ejs
@@ -5,7 +5,7 @@
             <div class="logo"><a href="/"><img class="logo-alojamascotas" src="./img/group.svg"
                         alt="logo de la empresa"></a></div>
             <div class="icon-search"><i class="fas fa-search" alt="logo busqueda"></i></div>
-            <div class="icon-cart"><a href="/products/carrito"><i class="fas fa-shopping-cart" alt="logo carrito"></i></a></div>
+            <div class="icon-cart"><a href="/productos/carrito"><i class="fas fa-shopping-cart" alt="logo carrito"></i></a></div>
         </section>
         <section class="subheader">
             <a class="crear-cuenta" href="/users/registro">CREAR CUENTA</a>
