arreglando el ruteo de imagenes del carrito

--- a/src/views/inicia-sesion.ejs
+++ b/src/views/inicia-sesion.ejs
@@ -5,6 +5,7 @@
 
 <%- include('partials/headLinks') %>
 
+<!------------------------------ UNIR LOS HEADERS!! EN UN SOLO PARTIAL----------------------  -->
 
     <body>
         <!-- headerMain -->
