--- a/src/views/partials/headLinks.ejs
+++ b/src/views/partials/headLinks.ejs
@@ -3,7 +3,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AlojaMascotas - Cart</title>
-    <link rel="icon" type="image/x-icon" href="/img/Group.svg">
+    <link rel="icon" type="image/x-icon" href="../img/Group.svg">
 
     <!-- Links CSS -->
     <link rel="stylesheet" href="../css/normalize.css">
