--- a/src/views/carrito.ejs
+++ b/src/views/carrito.ejs
@@ -16,7 +16,7 @@
         <section class="resumen-cart-productos">
             <article class="producto1">
                 <div class="info-producto">
-                    <div class="slider-producto"><img src="./img/guarderia_2.jpg" alt="Guarderia"></div>
+                    <div class="slider-producto"><img src="../img/guarderia_2.jpg" alt="Guarderia"></div>
                     <div class="detalle-producto">
                         <h4 class="titulo-producto">Guardería Catis</h4>
                         <p class="descripcion-producto">Lorem ipsum dolor sit amet consectetur,
@@ -64,7 +64,7 @@
 
             <article class="producto2">
                 <div class="info-producto">
-                    <div class="slider-producto"><img src="./img/guarderia_canina_1.jpg" alt="Guarderia"></div>
+                    <div class="slider-producto"><img src="../img/guarderia_canina_1.jpg" alt="Guarderia"></div>
                     <div class="detalle-producto">
                         <h4 class="titulo-producto">Guardería Wag Wag</h4>
                         <p class="descripcion-producto">Lorem ipsum dolor sit amet consectetur,
