--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -18,7 +18,7 @@
     <main>
         <section class="main-slider">
             <div class="slides">
-                <img src="./img/CATIS_2.jpg" alt="imagen main 1">
+                <img src="/img/CATIS_2.jpg" alt="imagen main 1">
                 <div class="contenedor-encontra-guarderia"><h3 class="encontra-guarderia">ENCONTRA SU LUGAR</h3></div>
             </div>
         </section>
@@ -27,7 +27,7 @@
 
         <section class="main-productos">
             <h3>NUESTRAS GUARDERIAS</h3>
-            <div class="guarderia-1"><img class="img-guarderia1" src="./img/guarderia_canina_1.jpg" alt="guarderia1"></div>
+            <div class="guarderia-1"><img class="img-guarderia1" src="/img/guarderia_canina_1.jpg" alt="guarderia1"></div>
             <i class="fas fas-arrow fa-angle-left"></i><h4>Guarderia 1</h4><i class="fas fas-arrow fa-angle-right"></i>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus, laboriosam molestias quos eum placeat
                 quibusdam explicabo autem debitis repellendus expedita?</p>
